# vfx_dev

./: README.md  doc_links.txt  vfx_dev_unittest.py
Qt/src/: gui_abc_list.py
alembic/: abcCopySamples.py  abcGPUinstance.py  abcReplicate.py  abc_list.py  abc_separation.py  first_frame_cut.py  get_attribute.py
cpp/lib_loader/src/: CMakeLists.txt  lib_loader.cpp
cpp/symmetry/: README.md  symmetry.py
cpp/symmetry/src/: CMakeLists.txt  symmetry_check.cpp
facebook /: fb.py
maya/MASH/: README.md  maya_mash.py  maya_mash_simple.py  maya_mash_test.py  maya_xgen.py  write_abc.py
maya/MASH/scatter_utils/: README.md  maya_mash_test.py  setup.cfg  setup.py
maya/MASH/scatter_utils/src/: amg_scatter_utils.cpp
maya/MASH/src/: CMakeLists.txt  write_alembic.cpp
maya/general_lesson/: l01.ma  lesson_v01.py  lesson_v02.py  lesson_v03.py  position_to_points.py  qqqz.ma
maya/general_lesson/.mayaSwatches/: qqqz.ma.swatches
nuke/: 3dequalizer_to_nuke.py  3dequalizer_to_nuke_01.py  auto_compositing.py  ch_renamer_01.py  channel_renamer.py  fix_light_groups.py  for_python.txt
openexr/: position.exr  position.nk  position.nk.autosave  read_position.py
python/: classes_and_objects.py  data_type.py  sin.py  vector.py
unittest/: 01.abc  exr_test.exr  vfx_dev_unittest.py
